<resources>
    <string name="app_name">Learning Android</string>
    <string name="counter">0</string>
    <string name="plus">Plus</string>
    <string name="minus">Minus</string>
    <string name="reset">Reset</string>
    <string name="hide_show">Hide/Show</string>
    <string name="meme_description">Luffy Meme</string>
    <string name="enterData">Enter Your Data</string>
    <string name="enterName">Enter your Name</string>
    <string name="enterPhone">Enter your Phone</string>
    <string name="enterEmail">Enter your Email</string>
    <string name="enterPassword">Enter your Password</string>
    <string name="enterAddress">Enter your Address</string>
    <string name="enter">Enter</string>
    <string name="loginForm">Login Form</string>
    <string name="signUp">Sign Up</string>
    <string name="login">Log In</string>
    <string name="noAcc">No Account Yet?</string>
</resources>