<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyBioRelativeLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterData"
        android:textColor="#000"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edit_name"
        android:inputType="text"
        android:layout_margin="16dp"
        android:hint="@string/enterName"
        android:layout_below="@id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edit_Phone"
        android:inputType="phone"
        android:layout_margin="16dp"
        android:hint="@string/enterPhone"
        android:layout_below="@id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_margin="16dp"
        android:layout_below="@+id/edit_Phone"
        android:hint="@string/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/edit_address"
        android:layout_margin="16dp"
        android:inputType="textPostalAddress"
        android:layout_below="@id/edit_email"
        android:hint="@string/enterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <Button
        android:text="@string/enter"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    </RelativeLayout>

</ScrollView>