<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/txt_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Get Your Data"
        android:textColor="#000"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/edit_name"
        android:inputType="text"
        android:layout_margin="16dp"
        android:hint="@string/enterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_Phone"
        android:inputType="phone"
        android:layout_margin="16dp"
        android:hint="@string/enterPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_email"
        android:inputType="textEmailAddress"
        android:layout_margin="16dp"
        android:hint="@string/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edit_address"
        android:layout_margin="16dp"
        android:inputType="textPostalAddress"
        android:hint="@string/enterAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_return"
        android:text="Return To ListView"
        android:textAllCaps="false"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

</LinearLayout>