<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LoginFormActivity">
<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txt_label_loginForm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/loginForm"
        android:textColor="#000"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/vg10"
        app:layout_constraintRight_toLeftOf="@id/vg90"
        app:layout_constraintTop_toBottomOf="@id/hg10" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintLeft_toRightOf="@id/vg10"
        app:layout_constraintRight_toLeftOf="@id/vg90"
        app:layout_constraintTop_toBottomOf="@id/txt_label_loginForm"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"
        app:layout_constraintLeft_toRightOf="@id/vg10"
        app:layout_constraintRight_toLeftOf="@id/vg90"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:autofillHints="" />

    <TextView
        android:id="@+id/txt_label_no_account_yet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/noAcc"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="@id/vg10"
        app:layout_constraintTop_toBottomOf="@id/edit_password" />

    <TextView
        android:id="@+id/txt_label_sign_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/signUp"
        android:textColor="#64B5F6"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/txt_label_no_account_yet"
        app:layout_constraintLeft_toRightOf="@+id/txt_label_no_account_yet"
        app:layout_constraintTop_toTopOf="@+id/txt_label_no_account_yet" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="#64B5F6"
        android:text="@string/login"
        android:textColor="#FFF"
        app:layout_constraintLeft_toRightOf="@+id/vg10"
        app:layout_constraintRight_toLeftOf="@+id/vg90"
        app:layout_constraintTop_toBottomOf="@id/txt_label_no_account_yet" />

    <android.support.constraint.Guideline
        android:id="@+id/hg10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/hg90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/vg10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/vg90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />
</android.support.constraint.ConstraintLayout>
</ScrollView>